<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_jsoncmd" Id="{0cd680fd-938b-4040-a1a3-1d7c49c9f9fa}">
    <Declaration><![CDATA[TYPE ST_jsoncmd :
STRUCT
	from_slot	:INT;
	to_slot		:INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>